; ModuleID = '/home/carl/AnghaBench/wcdb/fts/extr_mm_cipher.c_sqlite3_mm_set_cipher_key.c'
source_filename = "/home/carl/AnghaBench/wcdb/fts/extr_mm_cipher.c_sqlite3_mm_set_cipher_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"SELECT mm_cipher_key(?)\00", align 1
@SQLITE_OK = common dso_local global i32 0, align 4
@SQLITE_STATIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3_mm_set_cipher_key(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @sqlite3_prepare_v2(i32* %10, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 -1, i32** %8, i32* null)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = load i32, i32* @SQLITE_OK, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* %9, align 4
  store i32 %16, i32* %4, align 4
  br label %27

17:                                               ; preds = %3
  %18 = load i32*, i32** %8, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @SQLITE_STATIC, align 4
  %22 = call i32 @sqlite3_bind_blob(i32* %18, i32 1, i8* %19, i32 %20, i32 %21)
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @sqlite3_step(i32* %23)
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @sqlite3_finalize(i32* %25)
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %17, %15
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @sqlite3_prepare_v2(i32*, i8*, i32, i32**, i32*) #1

declare dso_local i32 @sqlite3_bind_blob(i32*, i32, i8*, i32, i32) #1

declare dso_local i32 @sqlite3_step(i32*) #1

declare dso_local i32 @sqlite3_finalize(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
